Add new endpoints
